Archive2/f6/73b33d1a9de1a6/output
main.cpp:18:27: error: constexpr variable 'ysize' must be initialized by a constant expression
    constexpr std::size_t ysize = arraySize(ps->c);
                          ^       ~~~~~~~~~~~~~~~~
main.cpp:18:45: note: read of non-constexpr variable 'ps' is not allowed in a constant expression
    constexpr std::size_t ysize = arraySize(ps->c);
                                            ^
main.cpp:15:8: note: declared here
    S* ps = &s;
       ^
1 error generated.
